objects/ELV_RFA_Control__mdt/ELV_RFA_Control__mdt.object-meta.xml
<CustomObject>
    <description>Kill switch and binding gates for the scratch Required for Approval solution. Default is fail-closed.</description>
    <label>Required for Approval Control</label>
    <pluralLabel>Required for Approval Controls</pluralLabel>
</CustomObject>