objects/ELV_RFA_Control__mdt/fields/Entitlement_Check_Active__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Check_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Entitlement Check Active</label>
    <type>Checkbox</type>
</CustomField>