objects/ELV_RFA_Control__mdt/fields/ESO_ISR_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>ESO_ISR_Record_Type__c</fullName>
    <label>ESO ISR Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>