objects/ELV_RFA_Control__mdt/fields/HuntIQ_ISR_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>HuntIQ_ISR_Record_Type__c</fullName>
    <label>HuntIQ ISR Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>