objects/ELV_RFA_Control__mdt/fields/ISR_Check_Active__c.field-meta.xml
<CustomField>
    <fullName>ISR_Check_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ISR Check Active</label>
    <type>Checkbox</type>
</CustomField>