objects/ELV_RFA_Control__mdt/fields/Pilot_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Pilot_User_Id__c</fullName>
    <defaultValue>&apos;005cc00000CgeRxAAJ&apos;</defaultValue>
    <label>Pilot User Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>