objects/ELV_RFA_Control__mdt/fields/Transition_ISR_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Transition_ISR_Record_Type__c</fullName>
    <label>Transition ISR Record Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>