objects/ELV_RFA_Control__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>